--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@
         vegaEmbed('#vis', 'map.vg.json').then(function(result) {
         }).catch(console.error);
     </script>
+
+    <h1>2023 Constructors' Championship</h1>
+
+    <div id="vis"></div>
+
+    <script type="text/javascript">
+        vegaEmbed('#vis', '2023_constructors_championship.vg.json').then(function(result) {
+        }).catch(console.error);
+</script>
 </body>
 </html>
