--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         vegaEmbed('#vis', 'map.vg.json').then(function(result) {
         }).catch(console.error);
     </script>
-
+</body>
+<body>
     <h1>2023 Constructors' Championship</h1>
 
     <div id="vis"></div>
@@ -26,6 +27,6 @@
     <script type="text/javascript">
         vegaEmbed('#vis', '2023_constructors_championship.vg.json').then(function(result) {
         }).catch(console.error);
-</script>
+    </script>
 </body>
 </html>
