--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body>
     <h1>F1 Circuits Around the World</h1>
 
-    <div id="vis"></div>
+    <div id="map"></div>
 
     <script type="text/javascript">
-        vegaEmbed('#vis', 'map.vg.json').then(function(result) {
+        vegaEmbed('#map', 'map.vg.json').then(function(result) {
         }).catch(console.error);
     </script>
 </body>
 <body>
     <h1>2023 Constructors' Championship</h1>
 
-    <div id="vis"></div>
+    <div id="line"></div>
 
     <script type="text/javascript">
-        vegaEmbed('#vis', '2023_constructors_championship.vg.json').then(function(result) {
+        vegaEmbed('#line', '2023_constructors_championship.vg.json').then(function(result) {
         }).catch(console.error);
     </script>
 </body>
