--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-    <h1>F1 Circuits Around the World</h1>
+    <h1>Constructor Wins Through the Season</h1>
 
-    <!-- Unique ID for the first visualization -->
     <div id="f1-map"></div>
 
     <h1>2023 Constructors' Championship</h1>
 
-    <!-- Unique ID for the second visualization -->
     <div id="constructors-chart"></div>
+
+    <h1>Driver Wins Pie Chart</h1>
+
+    <div id="pie-chart"></div>
+
+    <h1>Driver DNFs</h1>
+
+    <div id="bar-chart"></div>
 
     <script type="text/javascript">
         // Embed the first visualization (F1 map)
@@ -28,6 +34,13 @@
         // Embed the second visualization (2023 constructors chart)
         vegaEmbed('#constructors-chart', '2023_constructors_championship.vg.json').then(function(result) {
         }).catch(console.error);
+
+        vegaEmbed('#pie-chart', 'pie_chart.vg.json').then(function(result) {
+        }).catch(console.error);
+
+        vegaEmbed('#bar-chart', 'dnf_bar_chart.vg.json').then(function(result) {
+        }).catch(console.error);
+
     </script>
 </body>
 </html>
