--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-    <h1>Constructor Wins Through the Season</h1>
+    <h1>Formula 1 2023 Season</h1>
+
+    <h2>Constructor Wins Through the Season</h2>
 
     <div id="f1-map"></div>
 
-    <h1>2023 Constructors' Championship</h1>
+    <h2>2023 Constructors' Championship</h2>
 
     <div id="constructors-chart"></div>
 
-    <h1>Driver Wins Pie Chart</h1>
+    <h2>Driver Wins Pie Chart</h2>
 
     <div id="pie-chart"></div>
 
-    <h1>Driver DNFs</h1>
+    <h2>Driver DNFs</h2>
 
     <div id="bar-chart"></div>
 
